add Media RTSP Client using live555
add Media RTSP Client using live555

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,27 +20,19 @@ add_subdirectory( ${LIVE555} )
 set ( PROJECT_NAME rtspclient_with_opengl )
 set ( ${PROJECT_NAME}_HOME ${CMAKE_CURRENT_SOURCE_DIR} )
 message("SourceDir: " ${${PROJECT_NAME}_HOME} )
-set ( ${LIVE555}_HOME ${${PROJECT_NAME}_HOME}/${LIVE555} )
-
-message ( ${${LIVE555}_HOME} )
 
 if ( CMAKE_COMPILER_IS_GNUCXX )
    set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive" )
 endif ()
 
 if ( NOT DEFINED BUILD_SHARED_LIBS )
-   set ( BUILD_SHARED_LIBS TRUE )
+   set ( BUILD_SHARED_LIBS FALSE )
 endif ()
-
-include_directories ( ${${LIVE555}_HOME}/UsageEnvironment/include )
-include_directories ( ${${LIVE555}_HOME}/BasicUsageEnvironment/include )
-include_directories ( ${${LIVE555}_HOME}/groupsock/include )
-include_directories ( ${${LIVE555}_HOME}/liveMedia/include )
 
 # set where to find additional cmake modules if any
 # comment it out if not required
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
-message ( ${CMAKE_MODULE_PATH} )
+message ( "CMAKE_MODULE_PATH = ${CMAKE_MODULE_PATH}" )
 
 # set compiler support for C++11 standard
 option(USE_CXX11_STD "Product should be build with C++11 compiler option enabled" ON)
@@ -49,19 +41,47 @@ if(USE_CXX11_STD)
     set(CMAKE_CXX_STANDARD 11)
 endif()
 
+set ( ${LIVE555}_HOME ${${PROJECT_NAME}_HOME}/${LIVE555} )
+
+message ( "LIVE555_HOME = ${${LIVE555}_HOME}" )
+
+set ( ${LIVE555}_USAGE_ENVIRONMENT_HEADER_DIR ${${LIVE555}_HOME}/UsageEnvironment/include )
+set ( ${LIVE555}_BASIC_USAGE_ENVIRONMENT_HEADER_DIR ${${LIVE555}_HOME}/BasicUsageEnvironment/include )
+set ( ${LIVE555}_GROUP_SOCK_HEADER_DIR ${${LIVE555}_HOME}/groupsock/include )
+set ( ${LIVE555}_LIVE_MEDIA_HEADER_DIR ${${LIVE555}_HOME}/liveMedia/include )
+
+file(GLOB LIVE555_HEADER_FILES ${${LIVE555}_USAGE_ENVIRONMENT_HEADER_DIR} ${${LIVE555}_BASIC_USAGE_ENVIRONMENT_HEADER_DIR} 
+${${LIVE555}_GROUP_SOCK_HEADER_DIR} ${${LIVE555}_LIVE_MEDIA_HEADER_DIR} )
+
+message ( "LIVE555_HEADER_FILES = ${LIVE555_HEADER_FILES}" )
+
+set(THREADS_USE_PTHREADS_WIN32 true)
+find_package(Threads REQUIRED)
+
+message ( "THREADS_PTHREADS_INCLUDE_DIR = ${THREADS_PTHREADS_INCLUDE_DIR}" )
+message ( "CMAKE_THREAD_LIBS_INIT = ${CMAKE_THREAD_LIBS_INIT}" )
+
+#include_directories(${THREADS_PTHREADS_INCLUDE_DIR})
+#target_link_libraries(foo ${CMAKE_THREAD_LIBS_INIT})
+
 find_library(OpenGL REQUIRED)
 
 find_package(FFmpeg COMPONENTS AVCODEC AVFORMAT AVUTIL AVDEVICE REQUIRED)
+#find_package(FFmpeg REQUIRED)
 
 if(FFMPEG_FOUND)
+  message("Found FFMPEG/LibAV libraries")
+  message("FFMPEG_INCLUDE_DIRS = ${FFMPEG_INCLUDE_DIRS} ")
+  message("FFMPEG_LIBRARIES = ${FFMPEG_LIBRARIES} ")
+  message("FFMPEG_DEFINITIONS = ${FFMPEG_DEFINITIONS} ")
+
+#  include_directories(${FFMPEG_INCLUDE_DIRS})
+  
+#  include_directories(${FFMPEG_INCLUDE_DIRS})
+#  target_link_libraries (${PROJECT_NAME} ${FFMPEG_LIBRARIES})
 #  FFMPEG_INCLUDE_DIRS  - Include directory necessary for using the required components headers.
 #  FFMPEG_LIBRARIES     - Link these to use the required ffmpeg components.
 #  FFMPEG_DEFINITIONS   - Compiler switches required for using the required ffmpeg components.
-    message("FFMPEG_INCLUDE_DIRS = ${FFMPEG_INCLUDE_DIRS} ")
-    message("FFMPEG_LIBRARIES = ${FFMPEG_LIBRARIES} ")
-    message("FFMPEG_DEFINITIONS = ${FFMPEG_DEFINITIONS} ")
-
-    include_directories(${FFMPEG_INCLUDE_DIRS})
 else()
     message(FATAL_ERROR "FFMPEG not found")
 endif()
@@ -120,15 +140,30 @@ if ( WIN32 )
 endif ()
 #target_link_libraries ( ${PROJECT_NAME} PRIVATE ${${PROJECT_NAME}_LINK_LIBRARIES} )
 
-add_executable(
-    ${PROJECT_NAME}
-        "src/rtspclient_with_opengl.cpp"
-)
-target_link_libraries(${PROJECT_NAME} ${LIVE555} )
-target_include_directories( ${PROJECT_NAME} PRIVATE ${FFMPEG_INCLUDE_DIR} )
+# use standard file endings - rename to cxx if needed
+set(CXX_SRC_EXT_PATTERN ".cpp")
+set(C_SRC_EXT_PATTERN ".c")
+set(HDR_EXT_PATTERN ".h")
+
+# get all *.cpp files from src to build target
+file(GLOB SRC_FILES ${PROJECT_SOURCE_DIR}/src/*${CXX_SRC_EXT_PATTERN} ${PROJECT_SOURCE_DIR}/src/*${C_SRC_EXT_PATTERN})
+file(GLOB HDR_FILES ${PROJECT_SOURCE_DIR}/src/*${HDR_EXT_PATTERN})
+# makes source and header files group
+source_group("Source Files" FILES ${SRC_FILES})
+source_group("Header Files" FILES ${HDR_FILES})
+
+# build target
+add_executable(${PROJECT_NAME} ${SRC_FILES} ${HDR_FILES})
+
+target_include_directories( ${PROJECT_NAME} PRIVATE ${LIVE555_HEADER_FILES} )
+target_include_directories( ${PROJECT_NAME} PRIVATE ${FFMPEG_INCLUDE_DIRS} )
 #target_include_directories(${PROJECT_NAME} SYSTEM PRIVATE ${SDL2_INCLUDE_DIR})
+target_include_directories(${PROJECT_NAME} PRIVATE ${THREADS_PTHREADS_INCLUDE_DIR})
+
+target_link_libraries(${PROJECT_NAME} ${LIVE555} )
 target_link_libraries(${PROJECT_NAME} ${FFMPEG_LIBRARIES} )
 #target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY} )
+target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
 
 if ( BUILD_SHARED_LIBS )
 	target_compile_definitions(${PROJECT_NAME} PRIVATE LIVEMEDIA_IMPORTS)
