--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,7 @@
 [submodule "cmake"]
 	path = cmake
 	url = https://github.com/snikulov/cmake-modules.git
+	
+[submodule "tinylib"]
+	path = tinylib
+	url = https://github.com/diederickh/tinylib.git
