--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 2.8)
 
 set ( PROJECT_NAME rtspclient_with_opengl )
 set ( LIVE555 live555 )
+set ( TINYLIB tinylib )
 #set ( SDL2 sdl2 )
 
 # https://www.microsoft.com/en-us/download/details.aspx?id=6812
@@ -11,6 +12,10 @@ set ( LIVE555 live555 )
 message ( $ENV{DXSDK_DIR} )
 
 project( ${PROJECT_NAME} )
+
+if ( NOT DEFINED BUILD_SHARED_LIBS )
+   set ( BUILD_SHARED_LIBS FALSE )
+endif ()
 
 add_subdirectory( ${LIVE555} )
 #add_subdirectory( ${SDL2} )
@@ -23,10 +28,6 @@ message("SourceDir: " ${${PROJECT_NAME}_HOME} )
 
 if ( CMAKE_COMPILER_IS_GNUCXX )
    set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive" )
-endif ()
-
-if ( NOT DEFINED BUILD_SHARED_LIBS )
-   set ( BUILD_SHARED_LIBS FALSE )
 endif ()
 
 # set where to find additional cmake modules if any
@@ -42,6 +43,19 @@ if(USE_CXX11_STD)
 endif()
 
 set ( ${LIVE555}_HOME ${${PROJECT_NAME}_HOME}/${LIVE555} )
+set ( ${TINYLIB}_HOME ${${PROJECT_NAME}_HOME}/${TINYLIB} )
+
+MESSAGE ("TINYLIB_HOME = ${${TINYLIB}_HOME}" )
+FIND_PATH(TINYLIB_INCLUDE_DIRS tinylib.h
+  HINTS
+    ${PC_LIBTINYLIB_INCLUDEDIR}
+    ${PC_LIBTINYLIB_INCLUDE_DIRS}
+  PATH_SUFFIXES
+    ${${TINYLIB}_HOME}/src
+)
+message("TINYLIB_INCLUDE_DIRS include dir = ${TINYLIB_INCLUDE_DIRS}")
+
+#message("LM_SENSORS include dir = ${LM_SENSORS_INCLUDE_DIR}")
 
 message ( "LIVE555_HOME = ${${LIVE555}_HOME}" )
 
@@ -55,11 +69,16 @@ ${${LIVE555}_GROUP_SOCK_HEADER_DIR} ${${LIVE555}_LIVE_MEDIA_HEADER_DIR} )
 
 message ( "LIVE555_HEADER_FILES = ${LIVE555_HEADER_FILES}" )
 
-set(THREADS_USE_PTHREADS_WIN32 true)
+if ( WIN32 )
+set ( THREADS_USE_PTHREADS_WIN32 TRUE )
+#set ( THREADS_PTHREADS_WIN32_EXCEPTION_SCHEME C)
 find_package(Threads REQUIRED)
 
 message ( "THREADS_PTHREADS_INCLUDE_DIR = ${THREADS_PTHREADS_INCLUDE_DIR}" )
+message ( "THREADS_PTHREADS_WIN32_LIBRARY = ${THREADS_PTHREADS_WIN32_LIBRARY}" )
 message ( "CMAKE_THREAD_LIBS_INIT = ${CMAKE_THREAD_LIBS_INIT}" )
+
+endif ( WIN32)
 
 #include_directories(${THREADS_PTHREADS_INCLUDE_DIR})
 #target_link_libraries(foo ${CMAKE_THREAD_LIBS_INIT})
@@ -120,6 +139,7 @@ add_definitions ( ${${PROJECT_NAME}_DEFINITIONS} )
 if(MSVC)
     add_definitions(/FI"export.h")
 	add_definitions(-DWITH_OPENCV2)
+	add_definitions(-D_CONSOLE)
 else()
     # GCC or Clang
     add_definitions(-include export.h)
@@ -159,6 +179,7 @@ target_include_directories( ${PROJECT_NAME} PRIVATE ${LIVE555_HEADER_FILES} )
 target_include_directories( ${PROJECT_NAME} PRIVATE ${FFMPEG_INCLUDE_DIRS} )
 #target_include_directories(${PROJECT_NAME} SYSTEM PRIVATE ${SDL2_INCLUDE_DIR})
 target_include_directories(${PROJECT_NAME} PRIVATE ${THREADS_PTHREADS_INCLUDE_DIR})
+target_include_directories(${PROJECT_NAME} PRIVATE ${${TINYLIB}_HOME}/src)
 
 target_link_libraries(${PROJECT_NAME} ${LIVE555} )
 target_link_libraries(${PROJECT_NAME} ${FFMPEG_LIBRARIES} )
@@ -167,4 +188,6 @@ target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
 
 if ( BUILD_SHARED_LIBS )
 	target_compile_definitions(${PROJECT_NAME} PRIVATE LIVEMEDIA_IMPORTS)
+else ( LIVEMEDIA_STATIC )
+	target_compile_definitions(${PROJECT_NAME} PRIVATE LIVEMEDIA_STATIC)
 endif ()
