--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "vcpkg"]
 	path = vcpkg
 	url = https://github.com/melchi45/vcpkg.git
+[submodule "cmake"]
+	path = cmake
+	url = https://github.com/melchi45/cmake.git
