add glfw3 renderer
add glfw3 renderer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,7 +83,13 @@ endif ( WIN32)
 #include_directories(${THREADS_PTHREADS_INCLUDE_DIR})
 #target_link_libraries(foo ${CMAKE_THREAD_LIBS_INIT})
 
-find_library(OpenGL REQUIRED)
+find_package(OpenGL REQUIRED)
+if(OPENGL_FOUND)
+message("OPENGL_LIBRARIES = ${OPENGL_LIBRARIES} ")
+message("OPENGL_INCLUDE_DIRS = ${OPENGL_INCLUDE_DIRS} ")
+endif()
+
+#find_package(GLUT)
 
  #find_package(FFmpeg COMPONENTS AVCODEC AVFORMAT AVUTIL AVDEVICE SWSCALE REQUIRED)
 find_package(FFmpeg REQUIRED)
@@ -183,12 +189,15 @@ target_include_directories( ${PROJECT_NAME} PRIVATE ${FFMPEG_INCLUDE_DIRS} )
 #target_include_directories( ${PROJECT_NAME} SYSTEM PRIVATE ${SDL2_INCLUDE_DIR} )
 target_include_directories( ${PROJECT_NAME} PRIVATE ${THREADS_PTHREADS_INCLUDE_DIR} )
 target_include_directories( ${PROJECT_NAME} PRIVATE ${${TINYLIB}_HOME}/src )
+target_include_directories( ${PROJECT_NAME} PRIVATE ${OPENGL_INCLUDE_DIRS} )
 
 target_link_libraries( ${PROJECT_NAME} ${LIVE555} )
 target_link_libraries( ${PROJECT_NAME} ${FFMPEG_LIBRARIES} )
 target_link_libraries( ${PROJECT_NAME} ${SWSCALE_LIBRARIES} )
 #target_link_libraries( ${PROJECT_NAME} ${SDL2_LIBRARY} )
 target_link_libraries( ${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries( ${PROJECT_NAME} ${GLFW_LIBRARIES} )
+target_link_libraries( ${PROJECT_NAME} ${OPENGL_LIBRARIES} )
 
 if ( BUILD_SHARED_LIBS )
 	target_compile_definitions(${PROJECT_NAME} PRIVATE LIVEMEDIA_IMPORTS)
